feat: remove inbound and modify outbound

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -404,7 +404,7 @@
                 $("#billing_month_to").closest('.col-md-3').hide();
 
                 $("#total_amount_due").prop('readonly', true);
-                $("#lbl_account_no").html('Supplier');
+                $("#lbl_account_no").html('Supplier/Store');
             } else if (selectedCategory == "salary") {
                 if ($("#branch_expenses").val() == '') {
                     swal("Error Occured!", "Please select branch first!", "info");
