feat: add column 'Supplier/Store' on fund wallet statements

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -1084,6 +1084,7 @@
                                         <tr>
                                             <th class="text-center">DATE</th>
                                             <th class="text-center">DESCRIPTION</th>
+                                            <th class="text-center">SUPPLIER/STORE</th>
                                             <th class="text-center">ADD FUNDS</th>
                                             <th class="text-center">EXPENSES</th>
                                             <th class="text-center">RUNNING BALANCE</th>
@@ -1388,6 +1389,7 @@
                                                         <tr>
                                                             <th class="text-center">DATE</th>
                                                             <th class="text-center">DESCRIPTION</th>
+                                                            <th class="text-center">SUPPLIER/STORE</th>
                                                             <th class="text-center">UNIT PRICE</th>
                                                             <th class="text-center">QTY</th>
                                                             <th class="text-center">TOTAL AMOUNT DUE</th>
