fix: maintaning to maintaining

--- a/prime_admin/templates/lms/office_supplies_page.html
+++ b/prime_admin/templates/lms/office_supplies_page.html
@@ -258,7 +258,7 @@
                                     <tr>
                                         <th class="text-center">ID</th>
                                         <th class="text-center">DESCRIPTION</th>
-                                        <th class="text-center">MAINTANING</th>
+                                        <th class="text-center">MAINTAINING</th>
                                         <th class="text-center">RESERVE</th>
                                         <th class="text-center">UOM</th>
                                         <th class="text-center">1</th>
