--- a/prime_admin/templates/lms/office_supplies_page.html
+++ b/prime_admin/templates/lms/office_supplies_page.html
@@ -3,9 +3,10 @@
 
 {% block head %}
 <style>
-    table.dataTable thead th, table.dataTable thead td {
+    table.dataTable thead th,
+    table.dataTable thead td {
         padding: 0px !important;
-      }
+    }
 </style>
 {% endblock head %}
 
@@ -65,17 +66,17 @@
         });
 
         $('#tbl_summaries tbody').on('click', '.btn-inbound', function () {
-            var data = dtbl_summaries.row( $(this).parents('tr') ).data();
+            var data = dtbl_summaries.row($(this).parents('tr')).data();
 
             $("#supply_id").val(data[0]);
         });
 
-        $("#filter_year").change(function(){
+        $("#filter_year").change(function () {
             dtbl_supplies.ajax.reload();
             dtbl_summaries.ajax.reload();
         });
 
-        $("#filter_month").change(function(){
+        $("#filter_month").change(function () {
             dtbl_supplies.ajax.reload();
             dtbl_summaries.ajax.reload();
         });
@@ -83,34 +84,50 @@
 
         $("#div_marketer_buttons").on('click', '.btn-marketer', function () {
             var marketer_name = $(this).html();
-    
+
             // if(!(localStorage.getItem('sessSubArea') == _sub_area_name)){
             $("#btn_marketer_label").html(marketer_name.toUpperCase());
             $("#btn_marketer_label").val($(this).val());
             $("#card_header_label").html(marketer_name);
-    
+
             $('#btn_marketer_label').trigger('change');
         });
-    
-        $("#btn_marketer_label").change(function(){
+
+        $("#btn_marketer_label").change(function () {
             dtbl_supplies.ajax.reload();
             dtbl_summaries.ajax.reload();
         });
 
-        $("#outbound_branch").change(function(){
+        $("#outbound_branch").change(function () {
             $("#outbound_supply_id").empty();
             $("#outbound_supply_id").append($('<option></option>').attr("value", "").text("Choose branch first..."));
 
-            $.getJSON(`/learning-management/api/supplies?branch=${$(this).val()}`, function(response, status, xhr){
-                for(i=0; i < response.data.length; i++){
+            $.getJSON(`/learning-management/api/supplies?branch=${$(this).val()}`, function (response, status, xhr) {
+                for (i = 0; i < response.data.length; i++) {
                     var supply = response.data[i];
                     $("#outbound_supply_id").append($('<option></option>').attr("value", supply.id).text(supply.description));
                 }
-            }).fail(function(err){
+            }).fail(function (err) {
                 swal("Error Occured!", "Please refresh the page then try again!", "error");
             });
         });
-    });
+
+        $("#btn_print").click(function(){
+            var branch = $("#btn_marketer_label").val();
+            if (branch == 'all'){
+                swal("Print Failed!", "Please select branch!", "error");
+                return;
+            }
+            var year = $("#filter_year").val();
+            var month = $("#filter_month").val();
+            var pdf_url = "{{url_for('lms.print_office_supplies_summary')}}"
+
+            window.open(
+                pdf_url + 
+                `?branch=${branch}&year=${year}&month=${month}`
+            );
+        });
+    }); // Document.ready
 </script>
 {% endblock %}
 
@@ -131,30 +148,24 @@
                 </div>
             </div>
             <div class="page-title-actions">
-                {% if session['permissions'][RENDERED_MODEL.__amname__] is defined %}
-                    {% if session['permissions'][RENDERED_MODEL.__amname__]['create'] or current_user.is_superuser %}
-                        {% if TABLE_OPTIONS['create_modal'] %}
-                            <button type="button" data-toggle="modal" data-target="#mdl_outbound" title="Create new" data-placement="bottom"
-                                class="btn-shadow mr-3 btn btn-warning">
-                                <i class="fa fa-upload"></i>
-                                Supplies Withdrawal
-                            </button>
-                            <button type="button" data-toggle="modal" data-target="#create_modal" title="Create new" data-placement="bottom"
-                                    class="btn-shadow mr-3 btn btn-primary">
-                                {% if RENDERED_MODEL.__amname__ == 'user' %}
-                                <i class="fa fa-user-plus"></i>
-                                {% else %}
-                                <i class="fa fa-plus"></i>
-                                {% endif %}
-                                Create Item
-                            </button>
-                  
-                        {% elif TABLE_OPTIONS['create_button'] and MODAL_DATA['create_url'] is not none %}
-                            <a href="{{ url_for(MODAL_DATA['create_url']) }}" type="button" class="btn-shadow mr-3 btn btn-primary">
-                                <i class="fa fa-plus"></i>
-                            </a>
-                        {% endif %}
-                    {% endif %}
+                {% if current_user.role.name in ['Admin', 'Secretary', 'Partner'] %}
+                <button type="button" data-toggle="modal" data-target="#mdl_outbound" data-placement="bottom"
+                    class="btn-shadow mr-3 btn btn-warning">
+                    <i class="fa fa-upload"></i>
+                    Supplies Withdrawal
+                </button>
+                {% endif %}
+
+                {% if current_user.role.name in ['Admin'] %}
+                <button id="btn_print" type="button" data-placement="bottom" class="btn-shadow mr-3 btn btn-primary">
+                    <i class="fa fa-print"></i>
+                    Print
+                </button>
+                <button type="button" data-toggle="modal" data-target="#create_modal" title="Create new"
+                    data-placement="bottom" class="btn-shadow mr-3 btn btn-primary">
+                    <i class="fa fa-plus"></i>
+                    Create Item
+                </button>
                 {% endif %}
             </div>
         </div>
@@ -163,22 +174,24 @@
         <div class="card-header">
             <div id="card_header_label">
                 {% if current_user.role.name == "Marketer" %}
-                    {{TABLE_OPTIONS['marketers'][0].fname.upper()}}
+                {{TABLE_OPTIONS['marketers'][0].fname.upper()}}
                 {% else %}
-                    ALL BRANCHES
+                ALL BRANCHES
                 {% endif %}
             </div>
             <div class="btn-actions-pane-right">
                 <div class="nav">
                     <div class="dropleft btn-group">
                         {% if current_user.role.name == "Marketer" or current_user.role.name == "Partner" %}
-                        <button value="{{TABLE_OPTIONS['marketers'][0].id}}" id="btn_marketer_label" type="button" aria-haspopup="true" aria-expanded="false"
-                            data-toggle="dropdown" class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
+                        <button value="{{TABLE_OPTIONS['marketers'][0].id}}" id="btn_marketer_label" type="button"
+                            aria-haspopup="true" aria-expanded="false" data-toggle="dropdown"
+                            class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
                             {{TABLE_OPTIONS['marketers'][0].fname.upper()}}
                         </button>
                         {% else %}
-                        <button value="all" id="btn_marketer_label" type="button" aria-haspopup="true" aria-expanded="false"
-                            data-toggle="dropdown" class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
+                        <button value="all" id="btn_marketer_label" type="button" aria-haspopup="true"
+                            aria-expanded="false" data-toggle="dropdown"
+                            class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
                             ALL BRANCHES
                         </button>
                         {% endif %}
@@ -187,10 +200,10 @@
                         <div id="div_marketer_buttons" tabindex="-1" role="menu" aria-hidden="true"
                             class="dropdown-menu" x-placement="left-start"
                             style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-4px, 0px, 0px);">
-                            
-                            <button value="all" type="button" tabindex="0"
-                            class="dropdown-item btn-marketer">All Branches</button>
-                            
+
+                            <button value="all" type="button" tabindex="0" class="dropdown-item btn-marketer">All
+                                Branches</button>
+
                             {% for branch in TABLE_OPTIONS['branches'] %}
                             <button value="{{branch.id}}" type="button" tabindex="0"
                                 class="dropdown-item btn-marketer">{{branch.name}}</button>
@@ -253,7 +266,8 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table id="tbl_supplies" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                            <table id="tbl_supplies"
+                                class="align-middle mb-0 table table-bordered table-striped table-hover">
                                 <thead>
                                     <tr>
                                         <th class="text-center">ID</th>
@@ -302,7 +316,8 @@
                     </div>
                     <div class="tab-pane show" id="tab-animated1-1" role="tabpanel">
                         <div class="table-responsive">
-                            <table id="tbl_summaries" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                            <table id="tbl_summaries"
+                                class="align-middle mb-0 table table-bordered table-striped table-hover">
                                 <thead>
                                     <tr>
                                         <th class="text-center">ID</th>
@@ -321,7 +336,7 @@
                 </div>
             </div>
         </div>
-     
+
     </div>
 </div>
 {% endblock %}
