fix: cash flow profit branch input id

--- a/prime_admin/templates/lms/archive_modal.html
+++ b/prime_admin/templates/lms/archive_modal.html
@@ -21,8 +21,8 @@
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="position-relative form-group">
-                                        <label for="branch_profit" class="">Branch</label>
-                                        <select name="branch_profit" id="branch_profit" class="form-control" required>
+                                        <label for="branch" class="">Branch</label>
+                                        <select name="branch" id="branch" class="form-control" required>
                                             <option value="">Choose...</option>
                                             {% for branch in TABLE_OPTIONS['branches'] %}
                                             <option value="{{ branch.id }}">
