--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -439,6 +439,7 @@
         });
     
         $("#branch_profit").change(function(){
+            console.log("TESTSE");
             dtbl_partners_percent.ajax.reload();
         });
     
