--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -470,6 +470,9 @@
                 $("#description").append($('<option></option>').attr("value", "SNPL PASSPORT FEE").text("SNPL PASSPORT FEE"));
                 $("#description").append($('<option></option>').attr("value", "SNPL EPS-TOPIK TEST FEE").text("SNPL EPS-TOPIK TEST FEE"));
                 $("#description").append($('<option></option>').attr("value", "MALETA").text("MALETA"));
+                $("#description").append($('<option></option>').attr("value", "RUG").text("RUG"));
+                $("#description").append($('<option></option>').attr("value", "EXTENSION WIRE").text("EXTENSION WIRE"));
+                $("#description").append($('<option></option>').attr("value", "PC MOUSE").text("PC MOUSE"));
 
                 $("#billing_month_from").rules('remove');
                 $("#billing_month_to").rules('remove');
