--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -473,6 +473,7 @@
                 $("#description").append($('<option></option>').attr("value", "RUG").text("RUG"));
                 $("#description").append($('<option></option>').attr("value", "EXTENSION WIRE").text("EXTENSION WIRE"));
                 $("#description").append($('<option></option>').attr("value", "PC MOUSE").text("PC MOUSE"));
+                 $("#description").append($('<option></option>').attr("value", "FOOD ALLOWANCE").text("FOOD ALLOWANCE"));
 
                 $("#billing_month_from").rules('remove');
                 $("#billing_month_to").rules('remove');
