--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -473,7 +473,11 @@
                 $("#description").append($('<option></option>').attr("value", "RUG").text("RUG"));
                 $("#description").append($('<option></option>').attr("value", "EXTENSION WIRE").text("EXTENSION WIRE"));
                 $("#description").append($('<option></option>').attr("value", "PC MOUSE").text("PC MOUSE"));
-                 $("#description").append($('<option></option>').attr("value", "FOOD ALLOWANCE").text("FOOD ALLOWANCE"));
+                $("#description").append($('<option></option>').attr("value", "FOOD ALLOWANCE").text("FOOD ALLOWANCE"));
+                $("#description").append($('<option></option>').attr("value", "SNPL ALLOWANCE FOR TEACHER").text("SNPL ALLOWANCE FOR TEACHER"));
+                $("#description").append($('<option></option>').attr("value", "OUTING FUND").text("OUTING FUND"));
+                $("#description").append($('<option></option>').attr("value", "ATTY FEE FOR CASH ASSISTANCE").text("ATTY FEE FOR CASH ASSISTANCE"));
+                $("#description").append($('<option></option>').attr("value", "PRINTED REVIEWER/BOOK AT PRINTER SHOP").text("PRINTED REVIEWER/BOOK AT PRINTER SHOP"));
 
                 $("#billing_month_from").rules('remove');
                 $("#billing_month_to").rules('remove');
