--- a/prime_admin/templates/lms/office_supplies_page.html
+++ b/prime_admin/templates/lms/office_supplies_page.html
@@ -20,6 +20,8 @@
             "processing": true,
             "autoWidth": false,
             "serverSide": true,
+            "info": false,
+            "pageLength": 500,
             "ajax": {
                 "url": "/learning-management/datatables/supplies/monthly-transactions",
                 "data": function (d) {
@@ -27,9 +29,12 @@
                     d.month = $("#filter_month").val();
                     d.supplies_type = "office_supplies";
                     d.branch = $("#btn_marketer_label").val();
+                },
+                "dataSrc": function(json){
+                    $("#fund_request_total").html(json.fundRequestTotal);
+                    return json.data;
                 }
             },
-            "pageLength": 50,
             "ordering": false,
             "order": [[0, 'asc']],
             "columnDefs": [
@@ -54,7 +59,8 @@
                     d.branch = $("#btn_marketer_label").val();
                 }
             },
-            "pageLength": 50,
+            "info": false,
+            "pageLength": 500,
             "ordering": false,
             "order": [[0, 'asc']],
             "columnDefs": [
@@ -217,6 +223,27 @@
         </div>
         <div class="mb-12 card">
             <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-6 col-xl-4"></div>
+    
+                    <div class="col-lg-6 col-xl-4">
+                        <div class="card mb-3 widget-content">
+                            <div class="widget-content-wrapper">
+                                <div class="widget-content-left">
+                                    <div class="widget-heading">Fund Request</div>
+                                    <div class="widget-subheading">Total Used</div>
+                                </div>
+                                <div class="widget-content-right">
+                                    <div class="widget-numbers text-success"><span id="fund_request_total">0</span></div>
+                                    <!-- <div class="widget-numbers text-danger"><span>Ongoing Maintenance</span></div> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-lg-6 col-xl-4"></div>
+    
+                </div>
                 <ul class="tabs-animated-shadow nav-justified tabs-animated nav">
                     <li class="nav-item">
                         <a role="tab" class="nav-link show active" id="tab-c1-0" data-toggle="tab"
