--- a/prime_admin/templates/lms/earnings.html
+++ b/prime_admin/templates/lms/earnings.html
@@ -77,6 +77,7 @@
                     $("#total_savings").html("₱" + json.totalSavings);
                     $("#total_earnings_claimed").html("₱" + json.totalEarningsClaimed);
                     $("#total_savings_claimed").html("₱" + json.totalSavingsClaimed);
+                    $("#total_not_yet_claimed").html("₱" + json.totalNotYetClaimed);
     
                     $("#list_branches_total_earnings").children().remove();
     
@@ -425,6 +426,25 @@
             </div>
         </div>
         <div class="card-body">
+            <div class="row">
+                <div class="col-lg-6 col-xl-4"></div>
+
+                <div class="col-lg-6 col-xl-4">
+                    <div class="card mb-3 widget-content">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-heading">TOTAL NYC</div>
+                                <div class="widget-subheading">Total not yet claimed</div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="widget-numbers text-warning"><span id="total_not_yet_claimed">₱ 0.00</span></div>
+                                <!-- <div class="widget-numbers text-danger"><span>Ongoing Maintenance</span></div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-4"></div>
+            </div>
             <div class="row">
                 <div class="col-lg-6 col-xl-6">
                     <div class="card mb-3 widget-content">
