--- a/prime_admin/templates/lms/office_supplies_page.html
+++ b/prime_admin/templates/lms/office_supplies_page.html
@@ -230,7 +230,7 @@
                         <div class="card mb-3 widget-content">
                             <div class="widget-content-wrapper">
                                 <div class="widget-content-left">
-                                    <div class="widget-heading">Fund Request</div>
+                                    <div class="widget-heading">FUND REQUEST</div>
                                     <div class="widget-subheading">Total Used</div>
                                 </div>
                                 <div class="widget-content-right">
