--- a/prime_admin/templates/lms/student_records.html
+++ b/prime_admin/templates/lms/student_records.html
@@ -347,6 +347,7 @@
                     $("#view_civil_status").val(response.data.civil_status);
                     $("#view_gender").val(response.data.gender);
                     $("#view_registration_no").val(response.data.registration_no);
+                    $("#view_reviewers").val(response.data.reviewers);
 
                     $("#tbl_payment_history > tbody").empty();
 
