--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -168,6 +168,13 @@
                                     value="">
                             </div>
                         </div>
+                        <div class="form-row">
+                            <div class="col-md-4 mb-3">
+                                <label for="view_reviewers">Reviewers</label>
+                                <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_reviewers" name="view_reviewers"
+                                    value="">
+                            </div>
+                        </div>
                     </div>
                     
                 </div>
