feat: c0f3b9f2b7d1436fb06040cd9e2b913a

--- a/prime_admin/templates/lms/earnings_admin.html
+++ b/prime_admin/templates/lms/earnings_admin.html
@@ -282,6 +282,7 @@
                 text: "All marketers claim requests in this branch will be approved!",
     			inputPlaceholder: "Your Password",
                 type: 'input',
+                inputType: 'password',
                 showCancelButton: true,
                 cancelButtonColor: "#DD6B55",
                 confirmButtonColor: "#DD6B55",
