--- a/prime_admin/templates/lms/student_records.html
+++ b/prime_admin/templates/lms/student_records.html
@@ -933,6 +933,7 @@
                 text: "This student will be refunded!",
                 inputPlaceholder: "Your Password",
                 type: 'input',
+                inputType: 'password',
                 showCancelButton: true,
                 cancelButtonColor: "#DD6B55",
                 confirmButtonColor: "#DD6B55",
